service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hefalump-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: hefalump
  type: NodePort
